--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,36 +5,52 @@ on:
     branches:
       - main
 
+env:
+  REGISTRY: docker.io
+  USERNAME: boyuanclub
+  IMAGE_NAME: meowpick-backend
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Get project version
-        id: get_version
+      - name: Bump Version (from Docker Hub)
+        id: version
         run: |
-          if [ -f VERSION ]; then
-            VERSION=$(cat VERSION)
-          else
-            VERSION="v1.0.0"
-          fi
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          # 获取已有 tags
+          tags=$(curl -s "https://hub.docker.com/v2/repositories/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}/tags?page_size=100" | jq -r '.results[].name')
+          latest=$(echo "$tags" | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n 1)
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
+          if [ -z "$latest" ]; then
+            latest="v1.0.0"
+          fi
+
+          base=${latest%.*}
+          patch=${latest##*.}
+          next_patch=$((patch + 1))
+          next_version="${base}.${next_patch}"
+
+          echo "VERSION=$next_version" >> $GITHUB_ENV
+          echo "Next version: $next_version"
+
+      - name: Setup Docker buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log into registry
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ env.USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Build Docker image
-        run: |
-          docker build -t boyuanclub/meowpick-backend:$VERSION .
-          docker tag boyuanclub/meowpick-backend:$VERSION boyuanclub/meowpick-backend:latest
-
-      - name: Push Docker image
-        run: |
-          docker push boyuanclub/meowpick-backend:$VERSION
-          docker push boyuanclub/meowpick-backend:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+            ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:latest
