--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,6 +4,13 @@ on:
   push:
     branches:
       - main
+  # 添加手动触发事件
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Docker image version (e.g., v1.1.0). If empty, auto-increment.'
+        required: false
+        default: ''
 
 env:
   REGISTRY: docker.io
@@ -17,9 +24,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Bump Version (from Docker Hub)
+      - name: Determine Version
         id: version
         run: |
+          # 如果用户提供了版本号，则使用该版本号
+          if [ -n "${{ github.event.inputs.version }}" ]; then
+            echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+            echo "Using manual version: ${{ github.event.inputs.version }}"
+            exit 0
+          fi
+          
           # 获取已有 tags
           tags=$(curl -s "https://hub.docker.com/v2/repositories/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}/tags?page_size=100" | jq -r '.results[].name')
           latest=$(echo "$tags" | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n 1)
