docs: 新增 README [skip ci]

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,6 +19,12 @@ env:
 
 jobs:
   build:
+    # 🎯 关键修改：添加 if 条件来跳过 CI
+    # 逻辑：如果是手动触发 (workflow_dispatch) 则运行，或者如果是 push 触发且 commit message 不含 '[skip ci]' 则运行。
+    if: |
+      github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'push' && !contains(github.event.head_commit.message, '[skip ci]'))
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -38,15 +44,18 @@ jobs:
           tags=$(curl -s "https://hub.docker.com/v2/repositories/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}/tags?page_size=100" | jq -r '.results[].name')
           latest=$(echo "$tags" | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n 1)
 
+          # 优化版本递增逻辑 (确保仓库为空时从 v1.0.0 开始)
           if [ -z "$latest" ]; then
-            latest="v1.0.0"
+            # 如果没有找到匹配的 tag，则从 v1.0.0 开始
+            next_version="v1.0.0"
+          else
+            # 否则，在最新版本上增加 patch 号
+            base=${latest%.*}
+            patch=${latest##*.}
+            next_patch=$((patch + 1))
+            next_version="${base}.${next_patch}"
           fi
-
-          base=${latest%.*}
-          patch=${latest##*.}
-          next_patch=$((patch + 1))
-          next_version="${base}.${next_patch}"
-
+          
           echo "VERSION=$next_version" >> $GITHUB_ENV
           echo "Next version: $next_version"
 
