--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,10 @@ on:
         required: false
         default: ''
 
+# 赋予 CI 推送代码的权限
+permissions:
+  contents: write
+
 env:
   REGISTRY: docker.io
   USERNAME: boyuanclub
@@ -43,6 +47,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.ADMIN_PAT }} # 使用管理员 Token
 
       # =========================
       # 1. 安装 Go & swag
@@ -71,10 +76,17 @@ jobs:
       # =========================
       - name: Commit Swagger changes
         run: |
-          if git status --porcelain | grep '^ docs/'; then
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add docs/
+          # 配置 Git 用户身份
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # 尝试添加 docs 目录 (即使它是新建的或被忽略的)
+          git add docs/
+          
+          # 使用 git diff --staged --quiet 检查暂存区是否有变化
+          # 如果返回非 0 值，说明有变化需要提交
+          if ! git diff --staged --quiet; then
+            echo "Detected changes in docs/, committing..."
             git commit -m "chore(swagger): auto-generate swagger docs [skip ci]"
             git push
           else
@@ -82,7 +94,7 @@ jobs:
           fi
 
       # =========================
-      # 4. 版本号逻辑（你原封不动的）
+      # 4. 版本号逻辑（原封不动）
       # =========================
       - name: Determine Version
         id: version
